# chording-optimizer

./: .gitignore  CanaryKeyLayout.csv  ChordsFor_MonkeyType_english_10k.json  ChordsFor_MonkeyType_english_1k.json  ChordsFor_MonkeyType_english_200.json  OptimizedChordsFor_MonkeyType_english_10k.json  OptimizedChordsFor_MonkeyType_english_1k.json  OptimizedChordsFor_MonkeyType_english_200.json  OptimizedChordsFor_MonkeyType_english_5k.json  README.md  chording-optimizer.py  chords_generator.py  config.py  generator.config  generator.py  pyproject.toml  readme.md
data/: config.yaml
data/input/: generator.config
data/keyLayouts/: Colemak-DH_Matrix.yaml  Nordrassil_Ergonomic.yaml  Nordrassil_Ergonomic_full.yaml  QWERTY_Traditional_US-ANSI.yaml  Qwerty_Traditional_US_ANSI_letters.yaml  Riendril-QWERTZ_Ergonomic_DE-ISO.yaml  Riendril-QWERTZ_Traditional_DE-ISO.yaml
docs/: chording-concepts.md  file-formats.md
src/: chording-optimizer.py  get_parameters.py
src/analyzer/: analyzer.py
src/analyzing/: analyzer.py  token_scoring.py
src/assignment/: algorithm1.py  assignment_metrics.py  chord_assignment.py  token_selection.py
src/assignment_analyzing/: analyzer.py
src/assignment_improving/: set_metrics.py
src/chord_assignment/: algorithm1.py  algorithm2.py  assignment_metrics.py
src/chord_generation/: chord_generator.py  generate_all_chords.py  standalone_metrics.py
src/common/: benchmarking.py  config.py  layout.py  metrics.py  shared_types.py
src/initial_assignment/: algorithm2.py
src/token_generation/: corpus_generator.py  dataset_loader.py  (+7 more)
(+13 files in other folders)
